# UniArticles_MCPserver

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  README_ZH.md  TEACHING.md  claude_desktop_config.example.json  pyproject.toml
docs/: step_by_step_guide_en.md  step_by_step_guide_zh.md
src/uniarticles/: __init__.py  __main__.py  config.py  server.py
src/uniarticles/sources/: __init__.py  arxiv.py  chemrxiv.py  paperscraper.py  sciencedirect.py  scopus.py  semanticscholar.py
tests/: test_integration.py  test_new_functions.py  verify_server.py
