[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniarticles-mcp"
version = "1.5.0"
description = "Unified MCP server for multi-source academic literature retrieval"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "thinktraveller", email = "wangzh685@mail2.sysu.edu.cn" }
]
keywords = ["mcp", "academic", "research", "scopus", "arxiv", "pubmed", "scholar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.1.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "paperscraper",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/thinktraveller"
Repository = "https://github.com/thinktraveller/UniArticles_MCPserver"
Issues = "https://github.com/thinktraveller/UniArticles_MCPserver/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
uniarticles-mcp = "uniarticles.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uniarticles"]
